--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,6 @@ data/**
 # also keep all .gitkeep files
 !.gitkeep
 
-# keep also the example dataset
-!data/01_raw/*
 
 
 ##########################
@@ -149,3 +147,5 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+session_store.db
